# raconteur

./: .gitignore  DESIGN.md  DESIGN_redline_and_guards.md  README.md  pyproject.toml
raconteur/: __init__.py  brain.py  cli.py  config.py  context.py  draft.py  focus.py  guards.py  log.py  naming.py  notify.py  onepager.py  outline.py  paper.py  redline.py  redline_revise.py  render.py  revise.py  style.py  venue.py  web.py  wizard.py  zotero.py
tests/: test_context.py  test_guards.py  test_redline.py  test_revise_adversary.py
