[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "raconteur"
version = "0.1.0"
description = "Paper writing assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-docx>=1.1",
]

[project.scripts]
raconteur = "raconteur.cli:main"

[tool.setuptools.packages.find]
include = ["raconteur*"]
