[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "raconteur"
version = "0.1.0"
description = "Paper writing assistant"
requires-python = ">=3.11"
license = {text = "MIT"}
dependencies = [
    "httpx>=0.27",
    "PyYAML>=6.0",
    "python-docx>=1.2",   # 1.2 adds Document.add_comment, used by the redline tests
    "lxml>=5.0",          # redline.py manipulates OOXML directly
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
raconteur = "raconteur.cli:main"

[tool.setuptools.packages.find]
include = ["raconteur*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
